src/moin/themes/focus/static/css/theme.css
:root {
    --accent: #2269db;
    --accent-hover: #4382e7;
    --accent-light: #83b2ff;
    --accent-lighter: #e5edfd;
    --link: #2269db;
    --negative: #cc4343;
}

html { background-color: white; }
html * { box-sizing: border-box; }
html, body { max-width: 100vw; max-height: 100vh; overflow-x: hidden;}
h1, h2, h3, h4, h5, h6 { border-bottom: none; }
h2 { margin-top: 1.6em; margin-bottom: 0.5em; }
table tr td { border: 1px solid #bbb; }
.clickable-header { cursor: pointer; }
input[type="checkbox"] { appearance: none; border: 2pt solid #242424;
    height: 12pt; width: 12pt; transition: background-color 80ms linear; }
input[type="checkbox"]:checked { background-color: var(--accent-light); }

#moin-main-wrapper { display: flex; }
.moin-logo { text-align: start; }
.moin-sitename { display: flex; margin-top: 4pt; margin-bottom: 10pt;
    font-size: 1.4rem; font-weight: 600; white-space: normal; }
#toggle-header { display: none; background-color: transparent; border: none; min-width: 25px; }
#moin-username, #moin-navibar { display: flex; flex-direction: column; row-gap: 6pt; margin-bottom: 8pt; }
#moin-username a, #moin-navibar a { width: 90%; display: block; padding: 4pt; border-radius: 2pt; }
#moin-username a:hover, #moin-navibar a:hover,
#top-bar a:hover, .moin-breadcrumb a:hover { background-color: #d6d6d6bd }
#moin-navibar .wikilink { display: flex; align-items: center; }

#moin-searchform { float: none; display: flex; width: 90%; margin-bottom: 14pt;
    margin-right: 4pt; }
#moin-searchform input.moin-search-query { border: none;
    border-bottom: 1pt solid #242424; border-radius: 0pt; width: 90%; }
#moin-search-submit { min-width: 0pt;
    background: url("../icons/magnifying-glass-solid.svg") center center no-repeat; }
#moin-navibar .wikilink a { display: flex; column-gap: 4pt; align-items: center;}
#moin-navibar .wikilink i, #moin-username i { font-size: 14pt; }

#moin-page { min-width: 0pt; }

header { min-width: 140pt; width: 220px; min-height: 100vh; margin-right: 18pt; padding: 8pt;
    box-shadow: 2pt 0pt 10pt 2pt rgba(0, 0, 0, 0.1); }
header ol, header ul { padding-left: 0pt; }
header li::marker { display: none; }
header a { word-break: break-all; white-space: inherit; }
#moin-searchform input.moin-search-query:focus { background-color: #ecf2fd;
    border-bottom: 1pt solid var(--accent); outline: none; }

#top-bar { width: 100%; height: 32pt; overflow-x: auto; padding: 10pt 0;
    margin-right: 10pt; z-index: 1000; }
#top-bar ol, #top-bar ul { list-style-type: none; }
#top-bar ul { display: flex; column-gap: 10pt; padding-left: 0pt; }
#top-bar .moin-itemviews.panel { display: flex; column-gap: 10pt; padding-left: 0pt; }
#top-bar .moin-itemviews.panel.mobile { display: none; }
#top-bar a { padding: 4pt; border-radius: 2pt; }

#top-bar .moin-panel-heading { display: none; }
#top-bar a { white-space: nowrap; }
header a, header a:link, header a:visited,
#top-bar a, #top-bar a:visited { color: #242424; }

#top-bar-menu label { padding: 4pt; border-radius: 2pt; }
#top-bar-menu label:hover { background-color: #d6d6d6bd; cursor: pointer; }
#top-bar-menu #top-bar-menu-content {
    display: flex;
    flex-direction: column;
    row-gap: 7pt;
    min-width: 120pt;
    padding: 6pt 4pt;
    margin-top: 4pt;
    align-items: stretch;
    z-index: 10;
    transform-origin: top;
    transform: scaleY(0);
    transition: transform 80ms linear;
}
#top-bar-menu-switch { display: none; }
#top-bar-menu-switch:checked ~ #top-bar-menu-content {
    transform: scaleY(1);
    box-shadow: 0pt 2pt 4pt 2pt rgba(0, 0, 0, 0.25);
}
#top-bar-menu-switch:checked ~ #top-bar-menu-label i{
    transition: transform 80ms linear;
}
#top-bar-menu-switch:checked ~ #top-bar-menu-label i {
    transform: rotate(-180deg);
}
#top-bar-menu-content a { display: block; width: 100%; }

#top-bar, #top-bar-menu-content { position: fixed; background-color: white; }

.moin-breadcrumb { margin: 14pt 0; }
.moin-breadcrumb .moin-panel-heading { font-size: 1.1rem; margin-bottom: 4pt; }
.moin-breadcrumb ul { list-style-type: circle; padding-left: 16pt; }
.moin-breadcrumb ul li { position: relative; margin-bottom: 4pt; }
.moin-breadcrumb a { padding: 4px; border-radius: 2pt; display: inline-block; }
.moin-breadcrumb ul li ul.moin-alias { display: none; }
.moin-breadcrumb ul li:hover ul.moin-alias, ul.moin-alias:hover {
    display: block;
    position: absolute;
    bottom: calc(100% - 6pt);
    left: 20px;
    z-index: 500;
    list-style-type: none;
    border: 1px solid #777;
    border-radius: 4px;
    background-color: white;
    padding: 4px 0;
}
.moin-breadcrumb ul li:hover ul.moin-alias li:first-of-type {
    font-weight: bold;
    /* Same padding as <a> elements that are inside the following <li> elements */
    padding: 0 4px;
}
.moin-breadcrumb ul li:hover ul.moin-alias a { text-wrap: nowrap; width: 100%; }

#moin-footer { display: flex; flex-direction: column; width: unset;
    margin-top: 40pt; margin-bottom: 4pt; padding-right: 10pt; }
#moin-pageinfo, #moin-wiki-license,
#moin-credits, #moin-version, #moin-timings {
    float: none;
    margin: 0pt;
}
#moin-credits-container { display: flex; align-items: end; justify-content: space-between;
    column-gap: 20pt; }

#moin-content { min-height: 80vh; margin-top: 36pt; }
#moin-content-data { max-width: 1100pt; margin-right: 18pt; }
#moin-content-data .moin-permalink { display: none; position: relative;}
#moin-content-data .moin-permalink::after { display: inline-block;
    color: var(--accent); position: absolute; bottom: -4pt; }

.moin-flash { border-radius: 2pt; margin-right: 18pt; }
.moin-flash-info { background-color: #e4f2ff; border: 1pt solid var(--accent-light); }
.moin-flash-info::before { font-family: FontAwesome; content: "\f05a"; color: #415e79; }
.moin-flash-warning { background-color: #ffe4e4; border: 1pt solid #ff8181; }
.moin-flash-warning::before { font-family: FontAwesome; content: "\f071"; color: #a71818; }
/* ... */

